# udpTools

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
src/: aislog.txt  main.cpp  mainWin.cpp  mainWin.h  mainWin.ui
src/network/: udptransceiver.cpp  udptransceiver.h
